# IsekaiLocalizer

./: .gitignore  README.md  example.env  pyproject.toml
data/: ProblematicPack.json  TestPack.json
src/: api.py  main.py  models.py  pack_processors.py
src/api/: __init__.py  openai.py  ora.py
test/: TestPackInvalid.json  TestPackValid.json  test_pack_processors.py
